[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vamb_abundance_profile"
version = "0.0.2"
authors = [
  { name="Rob Edwards", email="raedwards@gmail.com" },
]
description = "A very simple package to convert the output of VAMB to an abundance table"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/linsalrob/vamb_abundance_profile"
Issues = "https://github.com/linsalrob/vamb_abundance_profile/issues"

[project.scripts]
vamb_abundance_profile = "vamb_abundance_profile:main"

